Update lobby hero taglines for all locales

--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -97,7 +97,7 @@
       "label": "Bienvenido,"
     },
     "hero": {
-      "tagline": "Apuestas basadas en habilidad"
+      "tagline": "Sin suerte, sin apuestas: solo importa tu habilidad"
     },
     "status": {
       "cashoutTitle": "Retiro en progreso",
