--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -97,7 +97,7 @@
       "label": "Witaj,"
     },
     "hero": {
-      "tagline": "Zakłady oparte na umiejętnościach"
+      "tagline": "Zero szczęścia, zero hazardu – liczą się tylko twoje umiejętności"
     },
     "status": {
       "cashoutTitle": "Trwa wypłata",
