--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -97,7 +97,7 @@
       "label": "Добро пожаловать,"
     },
     "hero": {
-      "tagline": "Ставки на мастерство"
+      "tagline": "Никакой удачи, никакого азарта — важны только твои навыки"
     },
     "status": {
       "cashoutTitle": "Идёт вывод",
