--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -311,7 +311,17 @@
       "balanceSummary": "Ваш баланс теперь {{amount}}."
     },
     "transfer": {
-      "pendingMessage": "Переводим средства…"
+      "pendingMessage": "Переводим средства…",
+      "success": {
+        "generic": "Баланс успешно синхронизирован.",
+        "cashout": "Вывод завершён успешно."
+      },
+      "error": {
+        "cashout": "Не удалось выполнить вывод. Попробуйте ещё раз.",
+        "insufficientBalance": "Недостаточно средств для завершения перевода.",
+        "persistence": "Не удалось сохранить обновлённый баланс. Попробуйте ещё раз.",
+        "generic": "Перевод не выполнен. Попробуйте ещё раз."
+      }
     },
     "boost": {
       "on": "Буст: активен",
